# Shortener

./: .gitignore  CLAUDE.md  README.md  claude.txt  docker-compose.yml  plan.md  research.md
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_video_drafts_exports.py  0003_candidate_short_clip.py  0004_video_draft_metadata.py  0005_candidate_feedback.py  0006_feedback_created_seq.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: router.py
backend/app/core/: __init__.py  celery_app.py  config.py
backend/app/db/: base.py  models.py  session.py
backend/app/services/: analysis_metadata.py  analysis_service.py  asr_service.py  audio_analysis_service.py  audio_probe.py  cache_utils.py  candidate_arc_search.py  candidate_audio_signals.py  candidate_events.py  candidate_generation.py  candidate_language_signals.py  candidate_rerank.py  candidate_role_scoring.py  candidate_spans.py  candidate_structure_signals.py  candidate_visual_signals.py  composite_candidate_generation.py  entity_service.py  episode_cleanup.py  jobs.py  keyframe_extraction.py  llm_candidate_refinement.py  llm_candidate_service.py  media_probe.py  proxy_transcoding.py  script_service.py  short_clip_service.py  shot_detection.py  storage_service.py  subtitle_exchange.py  subtitle_parse.py  tts_service.py  video_draft_service.py  (+2 more)
backend/scripts/: evaluate_candidates.py  smoke_test.py
backend/tests/: test_candidate_feedback.py  test_llm_candidate_service.py
(+65 files in other folders)
