[project]
name = "shorts-backend"
version = "0.1.0"
description = "Backend scaffold for drama shorts copilot"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0",
  "celery>=5.5.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "openai>=1.68.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.8.0",
  "redis>=6.0.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.39",
  "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
